--- a/code/client/src/css/global.scss
+++ b/code/client/src/css/global.scss
@@ -1,11 +1,11 @@
 
 @mixin extraStyles(){
-  .card {
+  .card, .card-address {
   background-color: white;
-  padding: 10px 20px 11px;
+  padding: 0px 10px 10px;
   border-radius: 5px;
   width: 100%;
-  border: 1px solid #afafaf;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
 }
 .pay-button{
@@ -33,8 +33,15 @@
 .pay-button:hover{
   box-shadow: 2px 5px 15px 2px rgba(0, 0, 0, 0.2);
 }
+
+.smaller{
+  font-size: smaller!important;
+}
 }
 
+body{
+    @include extraStyles();
+}
 
 
 .main-global {
@@ -55,7 +62,7 @@
     --form-width: 343px;
   }
   /* Additional styles */
-  @include extraStyles();
+
 
   /* Base */
   * {
